# ma5_expert

./: .gitignore  CutFlowObjects.py  CutFlowReader.py  CutFlowTable.py  FOM.py  FoM.py  LICENSE  MA5_CutReader.py  MA5lib_test.ipynb  Makefile  README.md  SafReader.py  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml
.github/workflows/: black.yml  pytest.yml  python-publish.yml
docs/: changelog-dev.md
docs/examples/: LaTeXoutput.ipynb  pad_interface_example.ipynb
docs/examples/mass1000005_300.0_mass1000022_60.0_mass1000023_250.0_xs_5.689/: history.ma5
docs/examples/mass1000005_300.0_mass1000022_60.0_mass1000023_250.0_xs_5.689/Input/: _defaultset.list
docs/releases/: changelog-dev.md  changelog-v3.0.md
examples/: ATLAS-SUSY-2018-032_Validation.ipynb  LaTeXoutput.ipynb
examples/mass1000005_300.0_mass1000022_60.0_mass1000023_250.0_xs_5.689/Output/SAF/defaultset/: CLs_output.json
ma5_expert/: __init__.py
ma5_expert/CutFlow/: Cut.py  CutFlowObjects.py  CutFlowReader.py  CutFlowTable.py  __init__.py
ma5_expert/system/: exceptions.py
src/ma5_expert/: __init__.py  _version.py
src/ma5_expert/backend/: __init__.py  ma5_backend.py
src/ma5_expert/cutflow/: __init__.py  cut.py  objects.py  reader.py  table.py
src/ma5_expert/histogram/: __init__.py  bin.py  histo.py  reader.py
src/ma5_expert/pad/: __init__.py  exclusion_computer.py  interface.py
src/ma5_expert/system/: __init__.py  exceptions.py  logger.py
src/ma5_expert/tools/: FoM.py  SafReader.py
tests/: test_cutflow.py  test_histo.py
(+12 files in other folders)
