[metadata]
name = ma5_expert
description = MadAnalysis 5 interpreter for Expert mode
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MadAnalysis/ma5_expert
author = Jack Y. Araz
author_email = jack.araz@durham.ac.uk
license = MIT
license_file = LICENSE
keywords = physics madanalysis5
project_urls =
    Source Code = https://github.com/MadAnalysis/ma5_expert
    Issue Tracker = https://github.com/MadAnalysis/ma5_expert/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    numpy>=1.19.5

[options.packages.find]
where = src
